portfolio content and indexstyles overflow issue fixed

--- a/indexstyles.css
+++ b/indexstyles.css
@@ -23,9 +23,10 @@
   position: absolute;
   background-color: white;
   min-width: 100px;
+  max-height: 500px;
+  overflow-y: scroll;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0);
   z-index: 1;
-
 }
 
 .dropdown-content a {
